Update 2021 exam questions

--- a/5_egzaminy/2021.md
+++ b/5_egzaminy/2021.md
@@ -4,7 +4,7 @@
 
 Katalog stron jest strukturą używaną w mechanizmach zarządzania pamięcią, gdzie wskazuje na tablice stron, które z kolei zawierają informacje o mapowaniu wirtualnych adresów pamięci na fizyczne adresy. Katalog stron jest pierwszym poziomem, a tablica stron drugim poziomem mapowania.
 
-## Wymień i krótko opisz możliwe stany linii w modelu spójności.
+## Wymień i krótko opisz możliwe stany linii w modelu spójności MESI.
 
 Możliwe stany linii w modelu spójności obejmują:
 
@@ -43,7 +43,7 @@ Klasy pamięci według sposobu adresowania obejmują:
 Fragmentacja zewnętrzna występuje, gdy wolna pamięć jest podzielona na małe, nieciągłe bloki, co uniemożliwia przydzielenie dużego bloku pamięci. Przykład: systemy alokacji pamięci o zmiennej wielkości bloków.
 Fragmentacja wewnętrzna występuje, gdy przydzielone bloki pamięci są większe niż potrzebne, co prowadzi do marnowania miejsca. Przykład: systemy alokacji pamięci o stałej wielkości bloków.
 
-## Czym przerwania różnią się od wyjątków?
+## Czy przerwania różnią się od wyjątków? Odpowiedź krótko uzasadnij.
 
 Przerwania są asynchroniczne i mogą wystąpić w dowolnym momencie w wyniku działania urządzeń zewnętrznych. Wyjątki są synchroniczne i występują jako bezpośredni rezultat wykonania instrukcji procesora, np. dzielenie przez zero.
 
@@ -97,9 +97,63 @@ Różnice między RISC i CISC:
 - **RISC (Reduced Instruction Set Computing)**: Mała liczba prostych instrukcji, szybkie wykonanie.
 - **CISC (Complex Instruction Set Computing)**: Duża liczba złożonych instrukcji, wolniejsze wykonanie, ale mniej instrukcji potrzebnych do wykonania zadania.
 
+## Wymień oraz krótko opisz różnice między procesorem superpotokowym a superskalarnym.
+
+- superskalarny - kilka jednostek wykonawczych i kilka instrukcji na raz
+- superpotokowy wykorzystuje potok głęboki ma wiele krótkich etapów, częstsze cykle,
+  Oba posiadają zagrożenia opóźnienia
+
 ## Opisz krótko zjawisko szamotania.
 
 Szamotanie (thrashing) występuje, gdy system operacyjny zbyt często wymienia strony pamięci między RAM a dyskiem, co prowadzi do znacznego spadku wydajności.
+
+## Zakładając użycie wszystkich dostępnych mechanizmów translacji adresu, wymień nazwy i krótko opisz kolejne przestrzenie adresowe używane podczas tej translacji w architekturze x86.
+
+W architekturze x86 przestrzenie adresowe używane podczas translacji adresu obejmują:
+
+1. **Adres logiczny**: Adres widziany przez program, składa się z segmentu i offsetu.
+2. **Adres liniowy**: Adres powstały po przetłumaczeniu adresu logicznego przez jednostkę zarządzania pamięcią (MMU) na adres liniowy (płaski).
+3. **Adres fizyczny**: Adres wynikowy po przetłumaczeniu adresu liniowego przy użyciu tabeli stron (page table), który wskazuje rzeczywiste miejsce w pamięci RAM.
+
+## Krótko opisz różnicę pomiędzy procesem a programem. Jakie elementy wchodzą w skład programu, a jakie w skład procesu?
+
+- **Program**: Zbiór instrukcji zapisanych w pliku, które mają być wykonane przez procesor. Elementy składowe programu to: kod źródłowy, pliki binarne, dane statyczne.
+- **Proces**: Aktywna instancja programu w trakcie jego wykonywania. Składa się z: kodu programu, aktualnego stanu rejestrów procesora, stosu, danych dynamicznych oraz informacji o zasobach systemowych.
+
+## Wymień i krótko opisz rodzaje konfliktów przetwarzania powodujących wstrzymanie potoku.
+
+- **Konflikt sterowania**: Możliwa zmiana ścieżki przetwarzania przy rozgałęzieniu.
+- **Konflikt danych**: Użycie tej samej danej przez 2 kolejne instrukcje.
+- **Konflikt strukturalny**: Niemożność jednoczesnego użycia jednego zasobu.
+
+## Wymień i krótko opisz najczęściej używane flagi dostępne w rejestrze flag architektury x86:
+
+- **CF (Carry Flag)**: Przeniesienie/pożyczka przy operacjach arytmetycznych.
+- **PF (Parity Flag)**: Parzystość liczby bitów ustawionych na 1 w wyniku operacji.
+- **ZF (Zero Flag)**: Wynik operacji arytmetycznej jest równy zero.
+- **SF (Sign Flag)**: Najwyższy bit wyniku operacji arytmetycznej, oznaczający znak.
+- **OF (Overflow Flag)**: Przepełnienie w operacjach arytmetycznych.
+
+## Na jakich etapach może nastąpić wiązanie symboli z ich wartościami?
+
+Wiązanie symboli z ich wartościami może nastąpić na następujących etapach:
+
+- **Kompilacja**: Symbole są przypisywane do wartości statycznych.
+- **Linkowanie**: Adresy symboli są rozwiązywane, gdy moduły programu są łączone.
+- **Ładowanie**: Adresy są przypisywane podczas ładowania programu do pamięci.
+- **Wykonanie**: Dynamiczne przypisywanie wartości podczas działania programu.
+
+## Wymień i krótko opisz klasy możliwych argumentów źródłowych instrukcji dostępnych w architekturze x86.
+
+- **Rejestr**: Bezpośrednie użycie rejestrów procesora.
+- **Adres pamięci**: Odwołanie do danych przechowywanych w pamięci.
+- **Natychmiastowa wartość (immediate)**: Stała wartość zakodowana bezpośrednio w instrukcji.
+- **Adresowanie pośrednie**: Odwołanie do pamięci przez rejestr lub wskaźnik.
+
+## Opisz krótko różnice pomiędzy przerwaniem precyzyjnym a nieprecyzyjnym.
+
+- **Przerwanie precyzyjne**: Procesor dokładnie identyfikuje miejsce, w którym wystąpiło przerwanie, zapisuje pełny stan systemu umożliwiający kontynuowanie pracy po obsłużeniu przerwania.
+- **Przerwanie nieprecyzyjne**: Procesor nie może dokładnie określić miejsca, w którym nastąpiło przerwanie, co może prowadzić do trudności w powrocie do prawidłowego stanu przed przerwaniem.
 
 ## Opisz krótko strukturę ramki stosu zdefiniowanej w ABI Systemu V dla architektury x86.
 
@@ -216,3 +270,54 @@ Rodzaje nadmiaru obejmują:
 - **Nadmiar sprzętowy**: Duplikacja elementów sprzętowych, np. zasilacze, dyski (RAID).
 - **Nadmiar czasowy**: Powtórzenie operacji w celu weryfikacji wyników.
 - **Nadmiar informacyjny**: Kodowanie danych w celu wykrycia i korekcji błędów, np. kody ECC.
+
+## Wymień i krótko opisz możliwe tryby pracy układu DMA
+
+DMA (Direct Memory Access) może pracować w różnych trybach:
+
+1. **Cycle Stealing**: DMA odbiera jedno słowo (lub kilka słów) pamięci w każdym cyklu zegara procesora.
+2. **Burst Mode**: DMA odbiera bloki danych w jednym cyklu zegara procesora, co jest szybsze, ale może obciążać magistralę.
+3. **Demand Mode**: DMA działa tylko na żądanie, co zmniejsza użycie magistrali w porównaniu do trybu cyklowego.
+
+---
+
+## Opisz funkcję prologu i epilogu
+
+**Funkcja prologu** to część kodu wykonywana na początku funkcji, która inicjalizuje i przygotowuje środowisko przed wykonaniem właściwego ciała funkcji.
+
+**Funkcja epilogu** to część kodu wykonywana na końcu funkcji, która przywraca pierwotne ustawienia środowiska lub przekazuje wyniki obliczeń.
+
+---
+
+## Omów krótko zalety i wady całkowicie skojarzeniowych pamięci podręcznych
+
+**Zalety całkowicie skojarzeniowych pamięci podręcznych**: Szybki dostęp do danych, brak konfliktów adresowych wewnętrznych.
+
+**Wady całkowicie skojarzeniowych pamięci podręcznych**: Możliwość konfliktów w przypadku współdzielenia często używanych danych (takich jak tablice).
+
+---
+
+## Opisz krótko czym jest i co zawiera kontekst procesu
+
+**Kontekst procesu** to zbiór informacji o stanie wykonania danego procesu, w tym wartości rejestrów, licznik instrukcji, stos, deskryptory otwartych plików i inne dane niezbędne do jego wznowienia po zatrzymaniu.
+
+---
+
+## Omów krótko ideę skoku opóźnionego. W jakim celu jest stosowany?
+
+**Skok opóźniony** polega na tym, że instrukcja skoku nie jest natychmiast wykonywana po jej napotkaniu, lecz po wykonaniu kolejnych instrukcji. Jest stosowany w celu zwiększenia wydajności poprzez uniknięcie opóźnień związanych z pobieraniem instrukcji skoku.
+
+---
+
+## Opisz krótko na czym polega strategia optymalnej wymiany stron
+
+**Strategia optymalnej wymiany stron** polega na wyborze do wymiany takiej strony, która nie będzie potrzebna najbliższej przyszłości, aby zminimalizować liczbę wymian i zapewnić szybszy dostęp do potrzebnych stron.
+
+---
+
+## Opisz krótko pełny mechanizm translacji adresu stosowany w architekturze x86
+
+**Mechanizm translacji adresu w architekturze x86** obejmuje dwie główne techniki:
+
+- **Segmentacja**: Przekształcanie segmentów adresowych w fizyczne adresy pamięci.
+- **Paging**: Dzielenie pamięci na strony i mapowanie stron wirtualnych na strony fizyczne za pomocą tablic stron (Page Tables).
