Further answers to exam questions

--- a/5_egzaminy/2021.md
+++ b/5_egzaminy/2021.md
@@ -4,13 +4,17 @@
 
 Katalog stron jest strukturą używaną w mechanizmach zarządzania pamięcią, gdzie wskazuje na tablice stron, które z kolei zawierają informacje o mapowaniu wirtualnych adresów pamięci na fizyczne adresy. Katalog stron jest pierwszym poziomem, a tablica stron drugim poziomem mapowania.
 
+Katalog stron zawiera wskaźniki wskazujące na tablice stron.
+Tablice stron przechowują adresy fizyczne ramek.
+Są to dwa kolejne poziomy mapowania adresu.
+
 ## Wymień i krótko opisz możliwe stany linii w modelu spójności MESI.
 
 Możliwe stany linii w modelu spójności obejmują:
 
 - **Zmodyfikowany (Modified)**: Linia jest aktualna i zmodyfikowana, tylko w pamięci podręcznej danego procesora.
-- **Wyłączony (Exclusive)**: Linia jest aktualna i jedyna w pamięci podręcznej danego procesora.
-- **Udostępniony (Shared)**: Linia jest aktualna i może być w pamięci podręcznej wielu procesorów.
+- **Wyłączony (Exclusive)**: Linia jest aktualna i jedynie w pamięci głównej.
+- **Wspólny (Shared)**: Linia jest aktualna i może być w pamięci podręcznej wielu procesorów.
 - **Nieważny (Invalid)**: Linia jest nieważna, nie zawiera aktualnych danych.
 
 ## Czym charakteryzują się instrukcje serializujące w architekturze x86? Podaj przykład takich instrukcji.
@@ -34,14 +38,14 @@ Brak ortogonalności może wystąpić, gdy pewne operacje nie są dostępne dla 
 
 Klasy pamięci według sposobu adresowania obejmują:
 
-- **Pamięć bezpośredniego dostępu (RAM)**: Każde słowo pamięci ma unikalny adres, dostęp jest szybki i bezpośredni.
-- **Pamięć asocjacyjna (CAM)**: Adresowanie na podstawie zawartości, wykorzystywana w szybkich tablicach tłumaczeń adresów.
-- **Pamięć sekwencyjna**: Adresowanie w sposób sekwencyjny, jak w taśmach magnetycznych.
+- **Pamięć bezpośredniego dostępu (RAM)**: Każde słowo pamięci ma unikalny adres, dostęp jest szybki i bezpośredni. Read z założenia 2 cykle, Write 1 cykl.
+- **Pamięć asocjacyjna (CAM)**: Adresowanie na podstawie zawartości, wykorzystywana w szybkich tablicach tłumaczeń adresów. Wykorzystuje wzorzec.
+- **Pamięć sekwencyjna (SAM)**: Adresowanie w sposób sekwencyjny, jak w taśmach magnetycznych. Adres wystawiony na magistralę, sygnał R/W, po pewnym czasie dane są zwracane spod adresu.
 
 ## Na czym polega różnica pomiędzy fragmentacją zewnętrzną a wewnętrzną? Podaj przykłady sytuacji, w których te fragmentacje się pojawiają.
 
-Fragmentacja zewnętrzna występuje, gdy wolna pamięć jest podzielona na małe, nieciągłe bloki, co uniemożliwia przydzielenie dużego bloku pamięci. Przykład: systemy alokacji pamięci o zmiennej wielkości bloków.
-Fragmentacja wewnętrzna występuje, gdy przydzielone bloki pamięci są większe niż potrzebne, co prowadzi do marnowania miejsca. Przykład: systemy alokacji pamięci o stałej wielkości bloków.
+- Fragmentacja zewnętrzna występuje, gdy wolna pamięć jest podzielona na małe, nieciągłe bloki, co uniemożliwia przydzielenie dużego bloku pamięci. Przykład: dziury po segmentach; w niewykorzystane obszary pamięci wrzucane są mniejsze bloki
+- Fragmentacja wewnętrzna występuje, gdy przydzielone bloki pamięci są większe niż potrzebne, co prowadzi do marnowania miejsca. Przykład: systemy alokacji pamięci o stałej wielkości bloków (stronicowanie)
 
 ## Czy przerwania różnią się od wyjątków? Odpowiedź krótko uzasadnij.
 
@@ -52,17 +56,17 @@ Przerwania są asynchroniczne i mogą wystąpić w dowolnym momencie w wyniku dz
 Klasy argumentów instrukcji w x86 obejmują:
 
 - **Natychmiastowe**: Stałe wartości zawarte bezpośrednio w instrukcji.
-- **Rejestrowe**: Wskazują na rejestry procesora.
-- **Pamięciowe**: Adresy w pamięci.
-- **Przesunięcia**: Wartości wykorzystywane do obliczeń adresów.
+- **Rejestrowe bezpośrednie**: Wskazują na rejestry procesora.
+- **Bezwględne pamięciowe**: Adresy w pamięci.
+- **Przesunięcia**: Wartości wykorzystywane do obliczeń adresów (według wzoru).
 
 ## Wymień i krótko opisz algorytmy uprzedzającego (antycypowanego) pobierania danych.
 
 Algorytmy antycypowanego pobierania danych obejmują:
 
-- **Sekwencyjne pobieranie**: Pobieranie kolejnych bloków danych zgodnie z przewidywanym ciągiem dostępu.
-- **Pobieranie na żądanie**: Pobieranie danych, które prawdopodobnie będą wkrótce potrzebne.
-- **Pobieranie oparte na wzorcach**: Analiza poprzednich dostępów do danych i przewidywanie przyszłych.
+- automatyczne (ang. prefetch always), inicjowane podczas każdej próby dostępuprzy okazji zwrotu do linii i jest zawsze pobierana linia i+1
+- implikowane w razie chybienia (ang. prefetch on a miss), wraz z wymuszonym wskutek chybienia pobraniem linii i zawsze jest, pobierana linia i+1
+- markowane (ang. tagged prefetch), podczas pierwszego odwołania do linii i‐tej, wraz z nią jest pobierana linia i+1, która zostaje oznaczona (ang. tagged)
 
 ## Wymień i krótko opisz najczęściej używane flagi dostępne w rejestrze flag architektury x86.
 
@@ -73,13 +77,15 @@ Najczęściej używane flagi w rejestrze flag x86 obejmują:
 - **Sign Flag (SF)**: Ustawiana, gdy wynik operacji arytmetycznej jest ujemny.
 - **Overflow Flag (OF)**: Ustawiana, gdy wynik operacji arytmetycznej przekracza zakres liczb dodatnich/ujemnych.
 
+U2 and NB jumps: ja, jb, jg, jl
+
 ## Wymień główne elementy modelu komputera z programem przechowywanym i podaj odpowiadające im elementy modelu maszyny Turinga.
 
 Główne elementy modelu komputera z programem przechowywanym:
 
 - **Pamięć**: Taśma maszyny Turinga.
-- **Jednostka sterująca**: Głowica odczytująca/zapisująca maszyny Turinga.
-- **Rejestry**: Stan maszyny Turinga.
+- **Procesor**: Głowica odczytująca/zapisująca maszyny Turinga. Procesor zawiera też rejestry, które odpowiadają stanom maszyny.
+- **Magistrala**: -
 
 ## Wymień i krótko opisz elementy składni języka asemblera.
 
@@ -89,13 +95,15 @@ Elementy składni języka asemblera obejmują:
 - **Argumenty**: Rejestry, wartości natychmiastowe, adresy pamięci.
 - **Dyrektywy**: Instrukcje dla asemblera (np. SEGMENT, END).
 - **Komentarze**: Opisy kodu dla programistów, ignorowane przez asembler.
+- **Symbole**: Nazwy identyfikujące adresy pamięci, etykiety skoków oraz inne elementy kodu.
+- **Wyrażenia**: Kombinacje symboli, stałych i operatorów matematycznych używane do obliczeń podczas składania programu.
 
 ## Wymień i krótko opisz różnice między architekturami RISC i CISC.
 
 Różnice między RISC i CISC:
 
-- **RISC (Reduced Instruction Set Computing)**: Mała liczba prostych instrukcji, szybkie wykonanie.
-- **CISC (Complex Instruction Set Computing)**: Duża liczba złożonych instrukcji, wolniejsze wykonanie, ale mniej instrukcji potrzebnych do wykonania zadania.
+- **RISC (Reduced Instruction Set Computing)**: Wiele uniwersalnych rejestrów, niewiele trybów adresowania, mniej więcej identyczne czasy wykonania rozkazów, uproszczone potokowanie.
+- **CISC (Complex Instruction Set Computing)**: Niewiele uniwersalnych rejestrów, wiele trybów adresowania, różne czasy wykonania rozkazów, utrudnione potokowanie.
 
 ## Wymień oraz krótko opisz różnice między procesorem superpotokowym a superskalarnym.
 
