Further answers to exam questions

--- a/5_egzaminy/2024.md
+++ b/5_egzaminy/2024.md
@@ -124,7 +124,7 @@ Wykład „WdWK – pamięć podręczna” slajdy 55-60
 ---
 
 E - Exclusive (Wyłączony)
-Dana znajduje się tylko w pamięci oraz w żadnej pamięci cache
+Dana znajduje się w jednej pamięci podręczej i w pamięci głównej oraz w żadnej innej pamięci podręcznej
 
 ## Ile poziomów uprzywilejowania (ang. protection rings) definiuje architektura x86
 
@@ -132,11 +132,22 @@ Wykład „WdWK – wieloprocesowość” slajd 11
 
 ---
 
+4:
+
+- kernel
+- shell
+- services
+- applications
+
 ## Podaj definicję zbioru roboczego procesu
 
 Wykład „WdWK – wieloprocesowość” slajdy 26-28
 
 ---
+
+Zbiór roboczy - zapotrzebowanie procesu na pamięć w stanie wykonania
+
+Jeżeli suma zbiorów roboczych procesów aktywnych > rozmiar dostępnej pamięci => szamotanie
 
 ## Wymień informacje przechowywane we wpisach tablicy stron w architekturze x86
 
@@ -144,11 +155,19 @@ Wykład „WdWK – wieloprocesowość” slajd 42
 
 ---
 
+Wpisy tablicy stron zawierają fizyczne adresy stron
+
 ## Opisz krótko ideę architektury równoległej SMP
 
 Wykład „WdWK – wieloprocesorowość” slajdy 9-10
 
 ---
+
+Wiele podobnych procesorów połączonych wspólną magistralą (bądź w inny sposób zapewniający równy czas dostępu), które współdzielą pamięć główną, interfejsy we/wy
+
+Procesory wykonują takie same instrukcje
+
+Komputer jest zarządzany przez jeden zintegrowany OS
 
 ## Wymień etapy wykonywania rozkazu w architekturze CISC
 
@@ -156,11 +175,25 @@ Wykład „WdWK – komputer.pdf” slajdy 14-19
 
 ---
 
+1. Instruction Fetch
+2. Instruction Decoding
+3. Address Generation
+4. Data Fetch (+Target Instruction Address)
+5. Execute
+6. Write / Put away
+
 ## Wymień klasy argumentów instrukcji w architekturze x86
 
 Wykład „WdWK – komputer.pdf” slajd 59
 
 ---
+
+Klasy argumentów instrukcji w x86 obejmują:
+
+- **Natychmiastowe**: Stałe wartości zawarte bezpośrednio w instrukcji.
+- **Rejestrowe bezpośrednie**: Wskazują na rejestry procesora.
+- **Bezwględne pamięciowe**: Adresy w pamięci.
+- **Przesunięcia**: Wartości wykorzystywane do obliczeń adresów (według wzoru).
 
 ## Wymień elementy składające się na ramkę stosu zgodną z ABI Systemu V dla architektury x86
 
@@ -168,11 +201,27 @@ Wykład „WdWK – komputer.pdf” slajdy 141, 142, 146, 147
 
 ---
 
+Struktura ramki stosu w ABI Systemu V dla x86 zawiera:
+
+- **Argumenty funkcji**: Przekazane parametry do wywołanej funkcji.
+- **Adres powrotu**: Adres, do którego wraca program po zakończeniu funkcji.
+- **Stare wartości rejestrów**: Zapisane wartości rejestrów, które funkcja zmienia.
+- **Lokalne zmienne**: Przestrzeń na zmienne lokalne funkcji.
+
 ## Podaj podstawowy wzór pozwalający określić czas wykonania programu, krótko opisz symbole
 
 Wykład „WdWK – wydajność.pdf” slajdy 10-26
 
 ---
+
+$t = T * CPI * N$
+
+gdzie:
+
+- t - czas programu
+- T - czas cyklu procesora
+- CPI - średnia liczba cykli na instruckję
+- N - liczba instrukcji
 
 ## Podaj definicję zrównoważenia maszyny (ang. machine balance)
 
@@ -180,11 +229,15 @@ Wykład „WdWK – wydajność.pdf” slajdy 31, 32
 
 ---
 
+Stosunek mocy obliczeniowej (FLOPS, BLOPS, IPS) do przepustowości pamięci (B/s)
+
 ## Na czym polega przetwarzanie superskalarne
 
 Wykład „WdWK – równoległość drobnoziarnista.pdf” slajd 20
 
 ---
+
+Przetwarzanie superskalarne wykorzystuje kilka jednostek wykonawczych wykonujących kilka takich samych instrukcji na raz.
 
 ## Wymień techniki łagodzenia konfliktów sterowania
 
@@ -192,11 +245,20 @@ Wykład „WdWK – równoległość drobnoziarnista.pdf” slajdy 40-46
 
 ---
 
+- spekulacyjne wykonanie
+- prognoza rozgałęzienia
+- opóźnienia skoków
+- wykonanie warunkowe
+- przestawianie instrukcji
+- buffering wyników
+
 ## Podaj przykładowe nazwy rejestrów SSE
 
 Wykład „WdWK – równoległość drobnoziarnista.pdf” slajdy 72, 73
 
 ---
+
+XMM1, XMM2
 
 ## W jaki sposób przechowywane są dane w komórkach pamięci dynamicznych (DRAM)
 
@@ -204,11 +266,15 @@ Wykład „WdWK – pamięć” slajdy 11, 15-17, 19, 20
 
 ---
 
+Dane są przechowywane w kondensatorach ??
+
 ## Na czym polega tryb AOW (ang. allocate on write)
 
 Wykład „WdWK – pamięć podręczna” slajdy 28-32
 
 ---
+
+Wymaga transferu do poziomu wyższego ??
 
 ## Jakie operacje w pamięci podręcznej mogą wystąpić wskutek chybienia przy odczycie
 
@@ -216,30 +282,112 @@ Wykład „WdWK – pamięć podręczna” slajd 28
 
 ---
 
+wypełnienie linii, wymiana linii ??
+
 ## Jakie stany modelu MESI może przyjąć linia pamięci podręcznej w trybie zapisu skrośnego (WT)
 
 Wykład „WdWK – pamięć podręczna” slajdy 55-58
 
 ---
 
+Jedynie Shared
+
 ## Wymień metody zapewniania atomowości instrukcji w architekturze x86
 
-Wykład „WdWK – wieloprocesowość” slajdy 85-88
+W architekturze x86, atomowość instrukcji jest kluczowa do synchronizacji procesów i wątków, szczególnie w systemach wieloprocesorowych. Oto główne metody zapewniania atomowości instrukcji:
 
----
+1. **Instrukcje LOCK**:
+
+   - Prefiks LOCK jest używany do zapewnienia, że instrukcja zostanie wykonana atomowo. Prefiks ten blokuje magistralę, aby żadna inna instrukcja nie mogła być wykonana w trakcie wykonywania instrukcji z prefiksem LOCK.
+
+2. **Instrukcje atomowe**:
+
+   - Niektóre instrukcje w x86 są zaprojektowane tak, aby były atomowe z natury. Przykłady obejmują:
+     - **XCHG** (Exchange): Zamienia wartość rejestru z wartością w pamięci.
+     - **CMPXCHG** (Compare and Exchange): Porównuje wartość w pamięci z wartością w rejestrze i, jeśli są one równe, zapisuje nową wartość.
+     - **XADD** (Exchange and Add): Dodaje dwie wartości i zapisuje wynik, zamieniając starą wartość.
+
+3. **Instrukcje synchronizacji pamięci**:
+   - **MFENCE**: Zapewnia, że wszystkie wcześniejsze instrukcje zapisu do pamięci są zakończone przed kontynuacją.
+   - **LFENCE**: Zapewnia, że wszystkie wcześniejsze instrukcje odczytu pamięci są zakończone przed kontynuacją.
+   - **SFENCE**: Zapewnia, że wszystkie wcześniejsze instrukcje zapisu do pamięci są zakończone przed kontynuacją w kontekście zapisów do pamięci.
 
 ## Z jakich elementów składa się kontekst procesu
 
-Wykład „WdWK – wieloprocesowość” slajdy 66-69, 71-73
+Kontekst procesu w systemie operacyjnym składa się z kilku kluczowych elementów, które są niezbędne do zachowania stanu procesu, gdy jest on wstrzymany i późniejszego przywrócenia jego wykonania. Oto główne elementy kontekstu procesu:
 
----
+1. **Rejestry procesora**:
+
+   - Rejestry ogólnego przeznaczenia (np. EAX, EBX, ECX, EDX w x86)
+   - Rejestry wskaźnikowe (np. ESP - Stack Pointer, EBP - Base Pointer)
+   - Rejestry segmentowe (np. CS, DS, SS)
+   - Rejestry flag (np. EFLAGS)
+
+2. **Licznik programu (Program Counter)**:
+
+   - Wskaźnik do aktualnie wykonywanej instrukcji.
+
+3. **Pamięć stosu**:
+
+   - Zawiera adresy powrotu, zmienne lokalne i inne dane kontrolne.
+
+4. **Przestrzeń adresowa procesu**:
+
+   - Segment kodu
+   - Segment danych
+   - Segment sterty
+
+5. **Informacje o stanie procesu**:
+
+   - Identyfikator procesu (PID)
+   - Stan procesu (np. running, waiting, blocked)
+   - Priorytet procesu
+   - Informacje o sygnałach
+
+6. **Zasoby systemowe przydzielone do procesu**:
+   - Uchwyty do otwartych plików
+   - Zasoby wejścia/wyjścia
 
 ## Wymień techniki zmniejszania zajętości pamięci przez struktury danych konieczne w stronicowaniu
 
-Wykład „WdWK – wieloprocesowość” slajdy (brak numeracji)
+W systemach operacyjnych stosowane są różne techniki zmniejszania zajętości pamięci przez struktury danych używane do zarządzania stronicowaniem:
 
----
+1. **Stronicowanie wielopoziomowe**:
+
+   - Zamiast używać jednej dużej tablicy stron, stosuje się hierarchię tablic stron (np. dwupoziomowa lub trzy-poziomowa tablica stron), co redukuje przestrzeń adresową potrzebną do przechowywania informacji o stronach.
+
+2. **Tablice stron z haszowaniem**:
+
+   - Wykorzystanie tablic stron z haszowaniem pozwala na zmniejszenie ilości pamięci potrzebnej do przechowywania mapowania stron, poprzez efektywniejsze wykorzystanie dostępnej przestrzeni.
+
+3. **Tablice stron z wpisami o zmiennej długości**:
+
+   - Zamiast używać wpisów o stałej długości, stosuje się wpisy o zmiennej długości, co pozwala na bardziej elastyczne i efektywne zarządzanie pamięcią.
+
+4. **Cachowanie tablic stron (TLB - Translation Lookaside Buffer)**:
+   - Wykorzystanie bufora podręcznego translacji pozwala na szybki dostęp do ostatnio używanych wpisów tablicy stron, zmniejszając potrzebę częstego odwoływania się do pełnej tablicy stron.
 
 ## Opisz krótko konfigurację macierzy RAID poziomu 1
 
-Wykład „WdWK – wieloprocesorowość” slajdy 43, 45, 49
+RAID poziomu 1, znany również jako **mirroring** (mirroring danych), polega na:
+
+1. **Duplikacja danych**:
+
+   - Dane są zapisywane jednocześnie na dwóch lub więcej dyskach. Każdy zapis danych jest replikowany na wszystkie dyski w macierzy.
+
+2. **Zwiększona niezawodność**:
+
+   - Ponieważ dane są kopiowane na więcej niż jeden dysk, awaria jednego z dysków nie powoduje utraty danych. Dane można odczytać z dysku zapasowego.
+
+3. **Wydajność odczytu**:
+
+   - RAID 1 może poprawić wydajność odczytu, ponieważ dane mogą być odczytywane równolegle z kilku dysków.
+
+4. **Brak zwiększonej wydajności zapisu**:
+
+   - Wydajność zapisu jest taka sama jak w przypadku pojedynczego dysku, ponieważ dane muszą być zapisane na wszystkich dyskach w macierzy.
+
+5. **Odwzorowanie przestrzeni dyskowej**:
+   - Efektywna przestrzeń dyskowa jest równa przestrzeni pojedynczego dysku w macierzy, ponieważ każda para dysków przechowuje te same dane.
+
+RAID 1 jest często stosowany w systemach, gdzie krytyczna jest ochrona danych, takich jak serwery baz danych, systemy transakcyjne i inne aplikacje wymagające wysokiej dostępności danych.
