Update transcripts and 2024 exam answers

--- a/5_egzaminy/2024.md
+++ b/5_egzaminy/2024.md
@@ -102,9 +102,10 @@ Wykład „WdWK – pamięć” slajd 55
 
 ---
 
-- blokowy (burst mode)
-- podkradanie cykli (cycle stealing mode)
-- przezroczysty (transparent mode)
+- blokowy (burst mode) - pełna blokada magistrali pamięci podczas transferu DMA
+- podkradanie cykli (cycle stealing mode) - częste blokowanie magistrali na krótki czas
+- przezroczysty (transparent mode) - transfer DMA, tylko gdy magistrala pamięci nie jest
+  używana przez CPU
 
 ## Na czym polega lokalność przestrzenna
 
@@ -134,9 +135,9 @@ Wykład „WdWK – wieloprocesowość” slajd 11
 
 4:
 
-- kernel
+- OS kernel
 - shell
-- services
+- OS services
 - applications
 
 ## Podaj definicję zbioru roboczego procesu
@@ -155,7 +156,20 @@ Wykład „WdWK – wieloprocesowość” slajd 42
 
 ---
 
-Wpisy tablicy stron zawierają fizyczne adresy stron
+Wpisy tablicy stron zawierają fizyczne adresy stron.
+
+Wpisy w tablicach stron (Page-Table Entry):
+
+- Adres fizyczny strony(Page-Table Base Address)
+- bity obecności (Present bit)
+- bity zapisu (Read/Write bit)
+- bit użytkownika/superwizora (User/Supervisor bit)
+- bit dostępu (Access bit)
+- bit modyfikacji (Dirty bit)
+- bit przenoszenia do cache (Cache Disabled bit)
+- bit zapisu przez (Write-Through bit)
+- Wolne bity dla programistów systemowych
+- bit globalny (Global Page / Global bit)
 
 ## Opisz krótko ideę architektury równoległej SMP
 
@@ -266,7 +280,7 @@ Wykład „WdWK – pamięć” slajdy 11, 15-17, 19, 20
 
 ---
 
-Dane są przechowywane w kondensatorach ??
+Dane są przechowywane w kondensatorach. Każda komórka pamięci DRAM składa się z jednego kondensatora i jednego tranzystora
 
 ## Na czym polega tryb AOW (ang. allocate on write)
 
@@ -274,7 +288,9 @@ Wykład „WdWK – pamięć podręczna” slajdy 28-32
 
 ---
 
-Wymaga transferu do poziomu wyższego ??
+To technika zarządzania pamięcią, która pozwala na optymalne wykorzystanie
+zasobów przez opóźnianie rzeczywistego przydzielania pamięci do momentu,
+gdy jest to absolutnie konieczne, czyli podczas zapisu danych.
 
 ## Jakie operacje w pamięci podręcznej mogą wystąpić wskutek chybienia przy odczycie
 
@@ -282,7 +298,10 @@ Wykład „WdWK – pamięć podręczna” slajd 28
 
 ---
 
-wypełnienie linii, wymiana linii ??
+- Unieważnienie linii
+- Wypełnianie linii
+- Odczyt danej
+- Zapis danej
 
 ## Jakie stany modelu MESI może przyjąć linia pamięci podręcznej w trybie zapisu skrośnego (WT)
 
@@ -362,22 +381,10 @@ Wykład „WdWK – wieloprocesowość” slajdy
 
 ---
 
-W systemach operacyjnych stosowane są różne techniki zmniejszania zajętości pamięci przez struktury danych używane do zarządzania stronicowaniem:
-
-1. **Stronicowanie wielopoziomowe**:
-
-   - Zamiast używać jednej dużej tablicy stron, stosuje się hierarchię tablic stron (np. dwupoziomowa lub trzy-poziomowa tablica stron), co redukuje przestrzeń adresową potrzebną do przechowywania informacji o stronach.
-
-2. **Tablice stron z haszowaniem**:
-
-   - Wykorzystanie tablic stron z haszowaniem pozwala na zmniejszenie ilości pamięci potrzebnej do przechowywania mapowania stron, poprzez efektywniejsze wykorzystanie dostępnej przestrzeni.
-
-3. **Tablice stron z wpisami o zmiennej długości**:
-
-   - Zamiast używać wpisów o stałej długości, stosuje się wpisy o zmiennej długości, co pozwala na bardziej elastyczne i efektywne zarządzanie pamięcią.
-
-4. **Cachowanie tablic stron (TLB - Translation Lookaside Buffer)**:
-   - Wykorzystanie bufora podręcznego translacji pozwala na szybki dostęp do ostatnio używanych wpisów tablicy stron, zmniejszając potrzebę częstego odwoływania się do pełnej tablicy stron.
+- Hierarchiczne tablice stron
+- Inwersyjna tablica stron
+- Zagnieżdżone tablice stron
+- Tablice stron z segmentacją
 
 ## Opisz krótko konfigurację macierzy RAID poziomu 1
 
