Update transcripts and 2024 exam answers

--- a/5_egzaminy/2024.md
+++ b/5_egzaminy/2024.md
@@ -94,7 +94,7 @@ Wykład „WdWK – pamięć” slajdy 25, 35, 36
 
 ---
 
-Precharge - jest to stan pośredni między deaktywacją wiersza a aktywacją innego
+Przywrócenie linii bitowej (bit line) i linii słowa (word line) do ich stanupoczątkowego (neutralnego) po zakończeniu operacji odczytu lub zapisu. Po zakończeniu operacji odczytu lub zapisu, linie bitowe są rozładowywane do stanu spoczynkowego. Linie słowa, które były wcześniej aktywowane do adresowania konkretnej komórki, są dezaktywowane.
 
 ## Wymień tryby pracy DMA
 
@@ -104,8 +104,7 @@ Wykład „WdWK – pamięć” slajd 55
 
 - blokowy (burst mode) - pełna blokada magistrali pamięci podczas transferu DMA
 - podkradanie cykli (cycle stealing mode) - częste blokowanie magistrali na krótki czas
-- przezroczysty (transparent mode) - transfer DMA, tylko gdy magistrala pamięci nie jest
-  używana przez CPU
+- przezroczysty (transparent mode) - transfer DMA, tylko gdy magistrala pamięci nie używana przez CPU
 
 ## Na czym polega lokalność przestrzenna
 
