--- a/5_egzaminy/2024_2.md
+++ b/5_egzaminy/2024_2.md
@@ -24,9 +24,9 @@
 
 ## Wymień podstawowe techniki profilowania kodu
 
-- instrumentacja kodu
-- monitorowanie wydajności CPU
-- analiza ścieżki wykonania
+- statyczne (analiza kodu - teoretyczne podejście)
+- dynamiczne (analiza realizacji procesu - wykonanie kodu)
+- analiza zużycia zasobów (cpu, memory)
 
 ## Wymień techniki łagodzenia konfliktów danych
 
@@ -35,26 +35,27 @@
 
 ## Podaj sekwencję poleceń, które należy wykonać w celu odczytu danych z pamięci DRAM w sytuacji, gdy jest aktywny inny wiersz w używanym banku
 
-- Zamknij aktywny wiersz (PRECHARGE), wybierz nowy wiersz (RAS), i odczytaj dane (CAS).
+- Zamknij aktywny wiersz (PRECHARGE), wybierz nowy wiersz (RAS), i odczytaj dane (CAS), zwrot danych na magistralę, precharge, powrót do trybu idle
 
 ## Wymień kategorie błędów w pamięci podręcznej
 
-- niepamiętane (miss)
-- błędy odczytu (read miss)
-- błędy zapisu (write miss)
+- błędy programowe,
+- błędy logiczne,
+- błędy synchronizacji
+- błędy sprzętowe
 
 ## Na czym polega fragmentacja wewnętrzna
 
-    - Fragmentacja wewnętrzna polega na niewykorzystaniu całego przydzielonego bloku pamięci, przez co część pamięci jest marnowana.
+- Fragmentacja wewnętrzna polega na niewykorzystaniu całego przydzielonego bloku pamięci, przez co część pamięci jest marnowana.
 
 ## Jakie informacje są przechowywane w rejestrach segmentowych w trybie chronionym architektury x86
 
-    - Rejestry segmentowe przechowują bazę, limit i prawa dostępu segmentu pamięci.
+- Rejestry segmentowe przechowują bazę, limit i prawa dostępu segmentu pamięci.
 
 ## Jakie informacje są przechowywane w buforze TLB
 
-    - TLB przechowuje mapowania między wirtualnymi a fizycznymi adresami pamięci.
+- TLB przechowuje mapowania między wirtualnymi a fizycznymi adresami pamięci.
 
 ## Podaj definicję przerwania nieprecyzyjnego
 
-    - Przerwanie nieprecyzyjne występuje, gdy nie można dokładnie wskazać, które instrukcje zostały ukończone przed przerwaniem.
+- Przerwanie nieprecyzyjne występuje, gdy nie można dokładnie wskazać, które instrukcje zostały ukończone przed przerwaniem.
